# AndroidApp

./: .gitmodules  build.gradle
.github/workflows/: build_apk.yaml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: custom_fragment_code.glsl  custom_vertex_code.glsl  fragment.glsl  screen_fragment_shader.glsl  screen_vertex_shader.glsl  vertex.glsl
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/common/: CMakeLists.txt  Common.h  JNIUtils.cpp  JNIUtils.h  Log.h  OsUtils.cpp  OsUtils.h  Shader.cpp  Shader.h  ShaderUtils.cpp  ShaderUtils.h  std_image.cpp
app/src/main/cpp/jni/: AccessHiddenApi.cpp  CMakeLists.txt  FFMpegJNI.cpp
app/src/main/cpp/native_render/: CMakeLists.txt  NativeRender.cpp  NativeRender.h  NativeRenderJNIInterface.cpp
app/src/main/cpp/shape/: CMakeLists.txt  CustomShape.cpp  CustomShape.h  IShape.cpp  IShape.h  Triangle.cpp  Triangle.h
app/src/main/java/cs/: CommandService.java  CommandService.kt
app/src/main/java/me/lijiahui/androidapp/: Constants.kt  MainActivity.kt  MyApplication.kt
app/src/main/java/me/lijiahui/androidapp/base/: BaseActivity.kt  BaseFragment.kt
app/src/main/java/me/lijiahui/androidapp/demo/: DemoActivity.kt  FFMpegActivity.kt
app/src/main/java/me/lijiahui/androidapp/demo/compose/: ComposeActivity.kt
app/src/main/java/me/lijiahui/androidapp/demo/exoplayer/: ExoFragment.kt
app/src/main/java/me/lijiahui/androidapp/extension/: BitmapExtension.kt  FileExtension.kt  GsonExtensions.kt
app/src/main/java/me/lijiahui/androidapp/ui/: AutoFitSurfaceView.kt  GridLines.kt
app/src/main/java/me/lijiahui/androidapp/util/: CameraUtils.kt  CrashHandler.kt  OSUtils.kt  OpenGLUtils.kt  PermissionUtils.kt  Shader.kt  ToastUtils.kt
app/src/main/java/me/lijiahui/androidapp/widget/: MyGLSurfaceView.kt  MyNativeRender.kt  MyRender.kt
app/src/main/res/drawable/: bg_btn_1.xml  ic_tiger.xml
app/src/main/res/layout/: activity_demo.xml  activity_ffmpeg.xml  activity_main.xml  activity_serialization.xml  fragment_exo.xml  fragment_ffmpeg.xml  fragment_floating.xml  fragment_hide_api.xml  fragment_media_codec.xml  fragment_screen_recorder.xml  layout_floating_window.xml
app/src/main/res/menu/: menu_demo.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: attrs.xml  dimens.xml  strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
scripts/: build_ffmpeg.sh
(+19 files in other folders)
